# jarne-lookup

./: .envrc  .gitignore  Makefile  README.org  flake.nix  jarne.cabal  jarnectl.cabal  rofi.sh
exe/: Lookup.hs  Main.hs  Repl.hs  Tail.hs
nix/reactive-banana/: 0001-remove-upper-bound-on-random.patch  reactive-banana-wx.nix
nix/wxHaskell/: 0001-inline-autogen-d-code.patch  0002-strip-autogen-from-cabal-build-process.patch  WxcClassInfo.hs  WxcClassTypes.hs  WxcClasses.hs  WxcClassesAL.hs  WxcClassesMZ.hs  wx.nix  wxcore.nix  wxdirect.nix
src/: Banana.hs  Html.hs  Lib.hs  Listen.hs  Main.hs  Widget.hs
