cabal-version:   3.4
name:            jarne
version:         0.1.0.0
license:         NONE
author:          Sam Stites
maintainer:      Sam Stites <spnony@f.cge.qri>#rot13
build-type:      Simple

common base
  default-language: GHC2021
  ghc-options:      -Wall
  default-extensions:
    ConstraintKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    LambdaCase
  build-depends:   base ^>= 4.18.0.0
     --, effectful        >= 2.3.0.0
     --, effectful-core   >= 2.3.0.0
     --, effectful-plugin >= 1.1.0.0
     --, co-log
      , hidapi
      --, lens
      --, containers
      --, unordered-containers
      , bytestring
      , utf8-string
      --, dlist
      , unix
      , text

executable x
  import:           base
  main-is:          Main.hs
  hs-source-dirs:   src

executable l
  import:           base
  main-is:          Listen.hs
  hs-source-dirs:   src
  build-depends:    aeson

executable w
  import:           base
  main-is:          Widget.hs
  hs-source-dirs:   src
  build-depends:
      reflex
    , reflex-gi-gtk
    , reflex-process
    , gi-gtk
    --, primitive
    -- primitive

  ghc-options:
      -O3
      -threaded
      -rtsopts
      "-with-rtsopts=-N4 -s"

-- executable h
--   import:           base
--   main-is:          Html.hs
--   hs-source-dirs:   src
--   build-depends:
--       reflex
--     , reflex-dom

executable b
  import:           base
  main-is:          Banana.hs
  hs-source-dirs:   src
  build-depends:
      reactive-banana ^>= 1.3
    -- , reactive-banana-wx ^>= 1.3
    , termbox ^>= 2
    , termbox-bindings-hs
    , termbox-banana ^>= 2

-- executable g
--   import:           base
--   main-is:          Banana.hs
--   hs-source-dirs:   src
--   build-depends:
--       reactive-banana ^>= 1.3
--     , reactive-banana-wx ^>= 1.3
--     , wx >= 0.93
--     , wxcore >= 0.93

-- executable h
--   import:           base
--   main-is:          Html.hs
--   hs-source-dirs:   src
--   build-depends:
--       reactive-banana
--     , threepenny-gui

