cabal-version:   3.4
name:            jarnectl
version:         0.1.0.0
license:         NONE
author:          Sam Stites
maintainer:      Sam Stites <spnony@f.cge.qri>#rot13
build-type:      Simple

common base
  default-language: GHC2021
  ghc-options:      -Wall
  default-extensions:
    ConstraintKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    LambdaCase
  build-depends:   base ^>= 4.18.0.0
     --, effectful        >= 2.3.0.0
     --, effectful-core   >= 2.3.0.0
     --, effectful-plugin >= 1.1.0.0
     --, co-log
      , hidapi
      , lens
      , containers
      , unordered-containers
      , bytestring
      , utf8-string
      , dlist
      , vector
      , unix
      , text
      , aeson
      , random

common binbase
  import:           base
  build-depends:    jarnectl

library
  import:           base
  exposed-modules: Lib
  hs-source-dirs:   src
  build-depends:    aeson

-- executable w
--   import:           binbase
--   main-is:          Widget.hs
--   hs-source-dirs:   src
--   build-depends:
--       reflex
--     , reflex-gi-gtk
--     , reflex-process
--     , gi-gtk
--     --, primitive
--     -- primitive
--
--   ghc-options:
--       -O3
--       -threaded
--       -rtsopts
--       "-with-rtsopts=-N4 -s"

executable repl
  import:           binbase
  main-is:          Main.hs
  hs-source-dirs:   exe
  build-depends:
    --  streaming
    -- , streaming-utils >= 0.2.6
    -- , async
      async
    , hinotify
    , bytestring

-- executable b
--   import:           binbase
--   main-is:          Banana.hs
--   hs-source-dirs:   src
--   build-depends:
--       reactive-banana ^>= 1.3
--     -- , reactive-banana-wx ^>= 1.3
--     , termbox ^>= 2
--     , termbox-banana ^>= 2
--     , random

-- -- -- executable g
-- -- --   import:           binbase
-- -- --   main-is:          Banana.hs
-- -- --   hs-source-dirs:   src
-- -- --   build-depends:
-- -- --       reactive-banana ^>= 1.3
-- -- --     , reactive-banana-wx ^>= 1.3
-- -- --     , wx >= 0.93
-- -- --     , wxcore >= 0.93
-- --
-- -- -- executable h
-- -- --   import:           binbase
-- -- --   main-is:          Html.hs
-- -- --   hs-source-dirs:   src
-- -- --   build-depends:
-- -- --       reactive-banana
-- -- --     , threepenny-gui
-- --

-- -- executable bn
-- --   import:           binbase
-- --   main-is:          NetMon.hs
-- --   hs-source-dirs:   exe
-- --   build-depends:
-- --       reactive-banana ^>= 1.3
-- --     , reactive-banana-wx ^>= 1.3
-- --     , termbox ^>= 2
-- --     , termbox-banana ^>= 2
