cabal-version:   3.4
name:            jarnectl
version:         0.1.0.0
license:         NONE
author:          Sam Stites
maintainer:      Sam Stites <spnony@f.cge.qri>#rot13
build-type:      Simple

common base
  default-language: GHC2021
  ghc-options:      -Wall
  default-extensions:
    ConstraintKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    LambdaCase
  build-depends:
      base ^>= 4.18.0.0
    --, effectful        >= 2.3.0.0
    --, effectful-core   >= 2.3.0.0
    --, effectful-plugin >= 1.1.0.0
    --, co-log
    , hidapi
    , microlens
    , unordered-containers
    , bytestring
    , utf8-string
    , lens
    , unix
    , text
    , aeson

common binbase
  import:           base
  build-depends:
      jarnectl
    , process

library
  import:           base
  exposed-modules:  Lib
  hs-source-dirs:   src

executable jarne-lookup
  import:           binbase
  main-is:          Lookup.hs
  hs-source-dirs:   exe

executable repl
  import:           binbase
  main-is:          Main.hs
  hs-source-dirs:   exe
